# nix-cache-upload-daemon

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: workflows
.github/workflows/: release.yaml
nix/: Cargo.nix  crate-hashes.json  crate2nix-sort-dependencies.patch  rust.nix  rust_build_overrides.nix  rust_runtime_dependencies.nix
src/: lib.rs  main.rs
