[package]
name = "nix-cache-upload-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9 ", default-features = false }
daemonize = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
    "ansi",
    "registry",
] }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[profile.release]
lto = true
codegen-units = 1
